--- a/yyc-test/Readme
+++ b/yyc-test/Readme
@@ -3,14 +3,17 @@ dependences:
     sbe
     zeromq
     
-run zeromq receiver(receive message on port 5557):
-    ./zmq_receiver_test
+run zeromq receiver:(receive original mdp message for save to db on port 5557, receive book message on port 5558)
+    ./zmq_receiver_test -m|-b <receive_port>
+    (m: original mdp message; b: book message)
     
 run udp/tcp packet receiver(receive packet on port 30001-30007):
     ./udp_receiver_test -s|-j
     (s: pre-opening startup; j: later joiner startup)
     
 run udp packet sender:
-    ./udp_sender_test <send_address> <send_port> <send_interval_ms> <lost_on>
-    (packet will not be sent if sequence_number%lost_on < 3)
+    ./udp_sender_test -d|-r|-i|-a <send_address> <send_port> <send_interval_ms> <lost_on>
+    (d: definition message; r: market recovery message; i: increment message; a: mixed message)
     
+run tcp replay packet sender:
+	./tcp_sender_test <send_port>    
